Fix grid gap error

--- a/assets/sass/components/layout/_grid.scss
+++ b/assets/sass/components/layout/_grid.scss
@@ -76,7 +76,7 @@
 	
 	@each $key in map-keys($grid-gaps) {
 		$_gap: get-grid-gap($key);
-		$_grid-class: '&.has-#{$key}Gaps';
+		$_grid-class: '&.has-#{camelize($key)}Gaps';
 		
 		@if $key == 'normal' {
 			$_grid-class: '&, #{$_grid-class}';
